data/derived/sp14/progs/unify/prog1294.ml.out
Characters 454-457:
  | Plus(v,w) ->	     "("^exprToString(v)^"+"exprToString(w)^")"
                                          ^^^
Error: This expression has type string
       This is not a function; it cannot be applied.
